css/style.css
#navigation {
  background-image: url(../images/bgmain.jpg);
  background-size: cover;
  background-position: center bottom;
  opacity: 0.7;
  height: 100vh;
  min-height: 650px;
 }

#brand1 {
  margin-left: 10%;
  margin-right: 20%;
}

#brand1 a {
  color: rgb(102, 3, 3);
}

#navTabs li {
  display: inline-block;
  margin-left: 35px;
  padding-top: 15px;
  position: relative;
}
#navTabs a:hover {
  color: aqua;
}

#navTabs a::before {
  content:"";
  display: block;
  height: 5px;
  width: 100%;
  background-color: aqua;
  position: absolute;
  top: 0;
  width: 0%;
  transition-duration: 250ms;

}

#navTabs a:hover::before {
  width: 100%;
}

@media (min-width: 0) {

}

#hero h1 {
  color: rgb(102, 3, 3);
  margin-left: 20%;
  text-align: right;
}
#hero h4 {
  color: rgb(0, 0, 0);
  margin-right: 20%;
  text-align: left;
}

